update to rails 5.0.0

--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -6,7 +6,7 @@
       https://twishli.st/{your_#{fa_icon 'twitter'}_id}
 
   %p
-    = link_to 'Start Twishli.st', user_omniauth_authorize_url(:twitter), class: 'btn btn-lg btn-success'
+    = link_to 'Start Twishli.st', user_twitter_omniauth_authorize_url, class: 'btn btn-lg btn-success'
 
 .text-center
   Sample:
