--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -1,3 +1,8 @@
+%meta(name='twitter:card' content='summary')
+%meta(name='twitter:site' content='@masarakki')
+%meta(name='twitter:title' content='twishlist')
+%meta(name='twitter:description' content='give a shortcut for your amazon wishlist with your twitter id, like https://twishli.st/masarakki')
+
 .lead.text-center
   Shorten your #{fa_icon 'amazon'} wishlist URL to
 
